fix: remove display none from body to ensure visibility

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -33,7 +33,7 @@
 }
 
 body {
-    display: none;
+    
     background-color: var(--bg-color);
     position: static;
     justify-content: center;
